# sweng_2

./: CMakeLists.txt  README.md  Singularity.def  job.sh  main
.github/workflows/: cmake-single-platform.yml
src/: main.cpp
test/: test_matrix_multiplication.cpp
